--- a/templates/index.html
+++ b/templates/index.html
@@ -5,15 +5,16 @@
   <meta charset="utf-8">
   <title>Куда пойти — Москва глазами Артёма</title>
 
-  <link rel="shortcut icon" href="{%static "favicon.png"%}" type="image/png">
+  <link rel="shortcut icon" href={% static './images/favicon.png' %} type="image/png">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
-  <link rel="stylesheet" href="{% static "leaflet-sidebar.js" %}"/>
+  <link rel="stylesheet" href="{% static "leaflet-sidebar.css" %}"/>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/@ansur/leaflet-pulse-icon@0.1.1/dist/L.Icon.Pulse.css">
+
   <style>
     body {
       padding: 0;
@@ -50,7 +51,7 @@
           "properties": {
             "title": "«Легенды Москвы",
             "placeId": "moscow_legends",
-            "detailsUrl": "https://raw.githubusercontent.com/devmanorg/where-to-go-frontend/master/places/moscow_legends.json"
+            "detailsUrl": "{% static "./places/moscow_legends.json" %}"
           }
         },
         {
@@ -67,13 +68,12 @@
         }
       ]
     }
-  {% verbatim  %}
   </script>
 
   <script id="app-template" type="text/template">
     <div v-bind:class="{'sidebar-content': 1, 'bg-white': selectedPlace, 'bg-secondary': !selectedPlace}">
       <div v-if="promptVisible" class="d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
-        <img class="d-block select-place-prompt mb-4" src="hand-pointer-regular.svg" alt="Select place">
+        <img class="d-block select-place-prompt mb-4" src="{% static "./images/hand-pointer-regular.svg" %}" alt="Select place">
         <h4>Выберите место на карте</h4>
       </div>
 
@@ -82,7 +82,7 @@
           <span class="sr-only">Loading...</span>
         </div>
       </div>
-
+      {% verbatim  %}
       <div class="place-description" v-if="selectedPlace">
 
         <img v-if="mainPhotoSrc" v-bind:src="mainPhotoSrc" class="d-block shadow mb-3 rounded" v-bind:alt="selectedPlace.title">
@@ -115,12 +115,12 @@
             </a>
           </template>
         </div>
+        {% endverbatim  %}
 
         <div v-html="selectedPlace.long_description"></div>
       </div>
     </div>
   </script>
-  {% endverbatim  %}
 
 </head>
 <body>
@@ -141,8 +141,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js" integrity="sha256-ngFW3UnAN0Tnm76mDuu7uUtYEcG3G5H1+zioJw3t+68=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/@ansur/leaflet-pulse-icon@0.1.1/dist/L.Icon.Pulse.js"></script>
 
-  <script src"{% static "leaflet-sidebar.js" %}"=></script>
-
+  <script src="{% static "leaflet-sidebar.js" %}"></script>
   <script>
     var map = L.map('map');
     map.setView([55.753989, 37.623191], 11);
@@ -226,7 +225,7 @@
           return marker;
         }
     }).addTo(map);
-
+    
     var sidebarApp = new Vue({
       el: '#sidebar-app',
       template: document.getElementById('app-template').innerHTML,
